--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -98,6 +98,7 @@
           >
             <h5 class="show">Add new record</h5>
             <div
+              class="txt-no-btn"
               [ngClass]="
                 !addNewRecordForm.valid && !tglUploadList ? 'show' : 'hide'
               "
