--- a/src/app/components/admin-depts/admin-depts.component.css
+++ b/src/app/components/admin-depts/admin-depts.component.css
@@ -35,8 +35,9 @@
   .p-datatable-tbody
   > tr:first-child
   > td:first-child {
-  box-shadow: inset 10px -3px 7px -9px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
-    inset 0px 3px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 10px -3px 7px -9px var(--box-shadow-inset),
+    inset -4px 0px 0px -2px var(--border-color),
+    inset 0px 3px 0px -2px var(--border-color) !important;
 }
 
 .table-depts
@@ -46,17 +47,19 @@
   > tr:last-child
   > td:first-child {
   border-bottom-left-radius: 0 !important;
-  box-shadow: inset 25px 0px 8px -24px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
-    inset 0px 3px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 25px 0px 8px -24px var(--box-shadow-inset),
+    inset -4px 0px 0px -2px var(--border-color),
+    inset 0px 3px 0px -2px var(--border-color) !important;
 }
 
 .table-depts ::ng-deep .p-datatable-table .sticky-column-checkboxes {
   position: sticky;
-  background-color: #e6e7ee !important;
+  background-color: var(--bg-color) !important;
   z-index: 1;
   left: 0 !important;
-  box-shadow: inset 10px -3px 7px -9px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
-    inset 0px 3px 0px -2px #d1d9e6;
+  box-shadow: inset 10px -3px 7px -9px var(--box-shadow-inset),
+    inset -4px 0px 0px -2px var(--border-color),
+    inset 0px 3px 0px -2px var(--border-color);
   border-top: none;
 }
 
@@ -64,8 +67,9 @@
   top: 0 !important;
   position: sticky !important;
   z-index: 2 !important;
-  box-shadow: inset 9px 9px 8px -9px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
-    inset 0px -3px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 9px 9px 8px -9px var(--box-shadow-inset),
+    inset -4px 0px 0px -2px var(--border-color),
+    inset 0px -3px 0px -2px var(--border-color) !important;
   border-top-left-radius: 1rem !important;
 }
 
@@ -74,27 +78,29 @@
 }
 
 ::ng-deep .p-datatable .p-datatable-tfoot > tr > td {
-  background-color: #e6e7ee;
+  background-color: var(--bg-color);
   border-width: 0;
   border: none;
   text-align: center;
   font-weight: normal;
-  box-shadow: inset 0px -13px 9px -12px #fff;
+  box-shadow: inset 0px -13px 9px -12px var(--box-shadow-inset-secondary);
 }
 
 ::ng-deep .p-datatable .p-datatable-tfoot > tr {
   border: none;
-  border-top: 0.0625rem solid #d1d9e6;
-  box-shadow: inset 5px 0 8px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6;
+  border-top: 0.0625rem solid var(--border-color);
+  box-shadow: inset 5px 0 8px -4px var(--box-shadow-inset),
+    inset -4px 0px 0px -2px var(--border-color);
 }
 
 ::ng-deep .p-datatable .p-datatable-tfoot > tr > td:last-child {
-  box-shadow: inset -16px -15px 10px -13px #fff;
+  box-shadow: inset -16px -15px 10px -13px var(--box-shadow-inset-secondary);
 }
 
 ::ng-deep .p-datatable .p-datatable-tfoot > tr > td:first-child {
-  box-shadow: inset 0px -13px 8px -12px #fff, inset 24px -17px 8px -24px #b8b9be,
-    inset -4px 0px 0px -2px #d1d9e6;
+  box-shadow: inset 0px -13px 8px -12px var(--box-shadow-inset-secondary),
+    inset 24px -17px 8px -24px var(--box-shadow-inset),
+    inset -4px 0px 0px -2px var(--border-color);
 }
 
 .new-select-permission ::ng-deep .p-multiselect-panel .p-multiselect-header {
@@ -123,5 +129,5 @@
   .p-dropdown
   .p-dropdown-panel {
   top: -36px !important;
-  background: #e6e7ee;
+  background: var(--bg-color);
 }
