--- a/src/app/components/admin-navbar/admin-navbar.component.css
+++ b/src/app/components/admin-navbar/admin-navbar.component.css
@@ -1,17 +1,18 @@
 ::ng-deep .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link {
-  color: #44476a;
-  border: 0.0625rem solid #d1d9e6;
+  color: var(--txt-color);
+  border: 0.0625rem solid var(--border-color);
   border-top-left-radius: 0.55rem;
   border-top-right-radius: 0.55rem;
-  background-color: #e6e7ee;
+  background-color: var(--bg-color);
   font-weight: normal;
 }
 
 ::ng-deep.p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .p-menuitem-link {
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
-  color: #44476a;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  background-color: var(--bg-color);
+  border: 0.0625rem solid var(--border-color);
+  color: var(--txt-color);
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
   font-weight: bold;
 }
 
@@ -27,11 +28,11 @@
   .p-tabmenu-nav
   .p-tabmenuitem:not(.p-highlight):not(.p-disabled):hover
   .p-menuitem-link {
-  border: 0.0625rem solid #d1d9e6;
-  color: #44476a;
-  background-color: #e6e7ee;
+  border: 0.0625rem solid var(--border-color);
+  color: var(--txt-color);
+  background-color: var(--bg-color);
   transition: all 0.3s ease-in-out;
-  box-shadow: 2px 2px 5px #b8b9be;
+  box-shadow: 2px 2px 5px var(--box-shadow-inset);
   text-decoration: none;
   font-size: bold;
   animation: pulse 3s infinite;
