--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -106,12 +106,12 @@ textarea {
   margin-bottom: 0;
   margin-left: 1rem;
   margin-top: 0.5rem;
-  color: #5c5c5f;
+  color: var(--txt-label-color);
 }
 
 ::ng-deep .modifyingAddress .p-dropdown .p-dropdown-panel {
   width: 100%;
-  background: #e6e7ee;
+  background: var(--bg-color);
 }
 
 ::ng-deep .modifyingAddress .button-neumorphism {
@@ -154,7 +154,7 @@ textarea {
 }
 
 .list-container .button-neumorphism.default:hover {
-  color: #44476ade !important;
+  color: var(--toggle-slide-hover-bg-color) !important;
 }
 
 .list-container .btn-group-col {
@@ -167,14 +167,14 @@ textarea {
 }
 
 .list-container .select-group-col {
-  /* box-shadow: -3px 0px 10px 0px #d1d9e6; */
+  /* box-shadow: -3px 0px 10px 0px var(--border-color); */
   border-top-right-radius: 1rem;
   max-width: 10%;
 }
 
 .list-container .group-row {
   padding: 0 !important;
-  border: 0.1rem solid #d1d9e6;
+  border: 0.1rem solid var(--border-color);
   border-bottom: none !important;
 }
 
@@ -193,14 +193,14 @@ textarea {
 }
 
 .list-container .button-neumorphism:hover {
-  background-color: #e0e1e9;
-  color: #d2d3db96 !important;
+  background-color: var(--bg-hover-color);
+  color: var(--toggle-slide-bg-color) !important;
 }
 
 .list-container .iconBtn {
   position: absolute;
   visibility: hidden;
-  color: transparent;
+  color: var(--bg-transparent);
   transition: font-size 200ms, color 100ms;
   font-size: 0;
   transition-timing-function: ease-in-out;
@@ -208,7 +208,7 @@ textarea {
 
 .list-container .button-neumorphism:hover .iconBtn {
   visibility: visible;
-  color: #44476a;
+  color: var(--txt-color);
   font-size: 1.3rem;
 }
 
@@ -222,8 +222,8 @@ textarea {
 }
 
 .call-info-form {
-  background: #e6e7ee;
-  border: 0.1rem solid #d1d9e6;
+  background: var(--bg-color);
+  border: 0.1rem solid var(--border-color);
   border-radius: 2rem;
   padding: 1.5rem;
   padding-top: 0;
