--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -6,8 +6,9 @@
   z-index: 5;
   top: 0;
   left: 0;
-  background-color: #e6e7ee;
-  box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #fff;
+  background-color: var(--bg-color);
+  box-shadow: 6px 6px 12px var(--box-shadow-inset),
+    -6px -6px 12px var(--box-shadow-inset-secondary);
   padding-bottom: 7rem;
 }
 
@@ -42,23 +43,25 @@
   margin: 0rem 2rem 0rem 2rem;
   height: 3rem;
   border-radius: 50%;
-  border: 0.0625rem solid transparent;
+  border: 0.0625rem solid var(--bg-transparent);
   width: 3rem;
 }
 
-.my-navbar-tab-container.default-tab{
-padding: 1rem 0 0 0;
+.my-navbar-tab-container.default-tab {
+  padding: 1rem 0 0 0;
 }
 
 .my-navbar-tab:hover {
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
+  background-color: var(--bg-color);
+  border: 0.0625rem solid var(--border-color);
   transition: all 0.2s ease-in-out;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
 }
 
 .active-tab {
-  box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #fff !important;
+  box-shadow: 6px 6px 12px var(--box-shadow-inset),
+    -6px -6px 12px var(--box-shadow-inset-secondary) !important;
   transition: all 0.2s ease;
 }
 
@@ -69,7 +72,7 @@ padding: 1rem 0 0 0;
 }
 
 .i-my-navbar {
-  color: #31344b;
+  color: var(--txt-color);
   font-size: 1.5rem;
 }
 
@@ -77,6 +80,7 @@ padding: 1rem 0 0 0;
   font-size: 1rem !important;
   overflow-wrap: break-word;
   width: fit-content;
+  color: var(--txt-secondary-color);
 }
 
 .dropdown-content {
@@ -89,7 +93,7 @@ padding: 1rem 0 0 0;
 }
 
 .dropdown-content :first-child {
-  background-color: transparent !important;
+  background-color: var(--bg-transparent) !important;
   box-shadow: none !important;
   border-radius: 50% !important;
 }
@@ -99,7 +103,7 @@ padding: 1rem 0 0 0;
 }
 
 .dropdown:hover .dropdown-content {
-  border: 0.0625rem solid #cfcfd6;
+  border: 0.0625rem solid var(--border-color);
   padding-top: 0.55rem;
   padding-bottom: 0.55rem;
 }
@@ -110,10 +114,11 @@ padding: 1rem 0 0 0;
 }
 
 .dropdown-content .my-navbar-tab:hover {
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
+  background-color: var(--bg-color);
+  border: 0.0625rem solid var(--border-color);
   transition: all 0.2s ease-in-out;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary) !important;
 }
 
 .dropdown {
