--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,6 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
 />
 
-
 <!-- my-navbar -->
 <div class="my-navbar" *ngIf="isLoggedIn$ | async as isLoggedIn">
   <div class="my-navbar-header">
@@ -55,6 +54,26 @@
               >
                 <a class="a-my-navbar" routerLink="admin-settings">
                   <i class="bi bi-safe2-fill i-my-navbar"></i>
+                </a>
+              </div>
+              <div
+                class="my-navbar-tab"
+                matTooltip="Dark mode"
+                matTooltipPosition="right"
+                *ngIf="theme && theme === 'light'"
+              >
+                <a class="a-my-navbar" (click)="switchTheme()">
+                  <i class="bi bi-moon-fill i-my-navbar"></i>
+                </a>
+              </div>
+              <div
+                class="my-navbar-tab"
+                matTooltip="Light mode"
+                matTooltipPosition="right"
+                *ngIf="theme && theme === 'dark'"
+              >
+                <a class="a-my-navbar" (click)="switchTheme()">
+                  <i class="bi bi-sun i-my-navbar"></i>
                 </a>
               </div>
               <div
