--- a/src/app/components/phone/phone.component.css
+++ b/src/app/components/phone/phone.component.css
@@ -22,17 +22,18 @@
 
 .phone-log {
   padding: 0.55rem 1rem 0 1rem;
-  border: 0.0625rem solid transparent;
+  border: 0.0625rem solid var(--bg-transparent);
   border-radius: 0.55rem;
   margin-top: 0.22rem;
   margin-left: 0.4rem;
 }
 
 .phone-log:hover {
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
+  background-color: var(--bg-color);
+  border: 0.0625rem solid var(--border-color);
   transition: all 0.2s ease-in-out;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
 }
 
 h6,
@@ -43,28 +44,28 @@ p {
 .container-neumorphism {
   padding: 1rem;
   border-radius: 0.55em;
-  border: 0.0625rem solid #d1d9e6;
-  color: #44476a;
-  background-color: #e6e7ee;
-  box-shadow: 2px 2px 5px #b8b9be;
+  border: 0.0625rem solid var(--border-color);
+  color: var(--txt-color);
+  background-color: var(--bg-color);
+  box-shadow: 2px 2px 5px var(--box-shadow-inset);
   margin-bottom: 1rem;
   animation: pulse 3s infinite;
 }
 
 .container-neumorphism:hover,
 .container-neumorphism:focus {
-  background-color: rgba(38, 40, 51, 0.03);
+  background-color: var(--bg-hover-transparent-color);
 }
 
 .border-bottom {
   padding-bottom: 0.44rem !important;
-  border-bottom: 0.0625rem solid #d1d9e6 !important;
+  border-bottom: 0.0625rem solid var(--border-color) !important;
   margin-bottom: 0.44rem;
 }
 
 .change-on-hold {
-  background-color: rgba(38, 40, 51, 0.03);
-  color: #c5c6cb;
+  background-color: var(--bg-hover-transparent-color);
+  color: var(--toggle-bg-color);
 }
 
 .filter-notes-container {
@@ -79,8 +80,8 @@ p {
   position: sticky;
   z-index: 1;
   top: 0;
-  background-color: #e6e7ee;
-  box-shadow: inset 0px -3px 0px -2px #d1d9e6;
+  background-color: var(--bg-color);
+  box-shadow: inset 0px -3px 0px -2px var(--border-color);
 }
 
 .phone-header ::ng-deep .p-dropdown {
@@ -89,7 +90,7 @@ p {
 }
 
 .phone-header ::ng-deep .p-dropdown .p-dropdown-label.p-inputtext {
-  color: #44476a !important;
+  color: var(--txt-color) !important;
   font-weight: 500;
 }
 
