--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -51,28 +51,30 @@
 }
 
 ::ng-deep .p-datatable table {
-  color: #44476a;
-  background-color: #e6e7ee;
-  box-shadow: inset 6px 4px 6px -5px #b8b9be, inset -3px -3px 7px #fff;
+  color: var(--txt-color);
+  background-color: var(--bg-color);
+  box-shadow: inset 6px 4px 6px -5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
   border-radius: 1rem;
   border: none;
 }
 
 ::ng-deep .queue-table .p-datatable table {
-  color: #44476a;
-  background-color: #e6e7ee;
-  box-shadow: inset 24px 33px 8px -32px #b8b9be, inset -54px 0px 15px -52px #fff;
+  color: var(--txt-color);
+  background-color: var(--bg-color);
+  box-shadow: inset 24px 33px 8px -32px var(--box-shadow-inset),
+    inset -54px 0px 15px -52px var(--box-shadow-inset-secondary);
   border-radius: 1rem;
   border: none;
 }
 
 ::ng-deep.p-datatable .p-datatable-header {
-  background-color: #e6e7ee;
+  background-color: var(--bg-color);
   border: none;
 }
 
 ::ng-deep .p-datatable .p-datatable-thead > tr > th {
-  color: #44476a;
+  color: var(--txt-color);
   text-align: center;
   background-color: transparent;
   border: none;
@@ -85,7 +87,7 @@
   background-color: transparent;
   border: none;
   width: fit-content;
-  border-top: 1px solid #d1d9e6;
+  border-top: 1px solid var(--border-color);
 }
 
 ::ng-deep .queue-table .p-datatable .p-datatable-tbody > tr > td {
@@ -94,7 +96,7 @@
   border: none;
   width: fit-content;
   border-top: none;
-  box-shadow: 0px -1px 0px 0px #d1d9e6;
+  box-shadow: 0px -1px 0px 0px var(--border-color);
 }
 
 ::ng-deep
@@ -103,7 +105,8 @@
   .p-datatable-tbody
   > tr:first-child
   > td:first-child {
-  box-shadow: inset 13px 0px 8px -12px #b8b9be, inset -4px 0px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 13px 0px 8px -12px var(--box-shadow-inset),
+    inset -4px 0px 0px -2px var(--border-color) !important;
 }
 
 ::ng-deep .p-datatable .p-datatable-tbody > tr {
@@ -114,26 +117,27 @@
 
 ::ng-deep.p-datatable .p-sortable-column:not(.p-highlight):hover {
   background-color: transparent;
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 ::ng-deep.p-datatable .p-sortable-column.p-highlight {
   background: transparent;
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 ::ng-deep.p-datatable .p-sortable-column.p-highlight:hover {
-  background: rgba(38, 40, 51, 0.03);
-  color: #44476a;
+  background: var(--bg-hover-transparent-color);
+  color: var(--txt-color);
 }
 
 ::ng-deep.p-datatable .p-sortable-column .p-sortable-column-icon {
-  color: #b8b9be;
+  color: var(--txt-label-color);
 }
 
 ::ng-deep.p-datatable .p-sortable-column:focus {
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
-  background-color: rgba(0, 0, 0, 0);
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
+  background-color: var(--bg-transparent);
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
 }
@@ -141,7 +145,7 @@
 ::ng-deep.p-datatable.p-datatable-hoverable-rows
   .p-datatable-tbody
   > tr:not(.p-highlight):hover {
-  background-color: rgba(38, 40, 51, 0.03);
+  background-color: var(--bg-hover-transparent-color);
   transition: 1s;
 }
 
@@ -150,21 +154,21 @@
 }
 
 ::ng-deep.p-paginator {
-  background: #e6e7ee;
-  color: #44476a;
+  background: var(--bg-color);
+  color: var(--txt-color);
   border: none;
   padding: 1rem 0 0 0;
 }
 
 ::ng-deep.p-paginator .p-paginator-current {
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 ::ng-deep.p-paginator .p-paginator-first,
 ::ng-deep.p-paginator .p-paginator-prev,
 ::ng-deep.p-paginator .p-paginator-next,
 ::ng-deep.p-paginator .p-paginator-last {
-  color: #b8b9be;
+  color: var(--box-shadow-inset);
   border-radius: 1rem;
 }
 
@@ -173,25 +177,26 @@
 }
 
 ::ng-deep.p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
-  color: #44476a;
-  background-color: rgba(0, 0, 0, 0);
+  color: var(--txt-secondary-color);
+  background-color: var(--bg-transparent);
   border-radius: 1rem;
-  border: 0.0625rem solid #d1d9e6;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  border: 0.0625rem solid var(--border-color);
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
 }
 
 ::ng-deep.p-paginator .p-paginator-pages .p-paginator-page {
   border-radius: 1rem;
-  color: #b8b9be;
+  color: var(--txt-color);
 }
 
 ::ng-deep.p-paginator
   .p-paginator-pages
   .p-paginator-page:not(.p-highlight):hover {
-  border: 0.0625rem solid #d1d9e6;
-  color: #44476a;
-  background-color: #e6e7ee;
-  box-shadow: 2px 2px 5px #b8b9be;
+  border: 0.0625rem solid var(--border-color);
+  color: var(--txt-color);
+  background-color: var(--bg-color);
+  box-shadow: 2px 2px 5px var(--box-shadow-inset);
   font-weight: 600;
 }
 
@@ -203,10 +208,10 @@
   .p-paginator-next:not(.p-disabled):not(.p-highlight):hover,
 ::ng-deep.p-paginator
   .p-paginator-last:not(.p-disabled):not(.p-highlight):hover {
-  border: 0.0625rem solid #d1d9e6;
-  color: #44476a;
-  background-color: #e6e7ee;
-  box-shadow: 2px 2px 5px #b8b9be;
+  border: 0.0625rem solid var(--border-color);
+  color: var(--txt-color);
+  background-color: var(--bg-color);
+  box-shadow: 2px 2px 5px var(--box-shadow-inset);
   font-weight: 600;
 }
 
@@ -236,25 +241,25 @@ p-paginator-icon {
 ::ng-deep.p-datatable
   .p-sortable-column:not(.p-highlight):hover
   .p-sortable-column-icon {
-  color: #44476a;
+  color: var(--txt-color);
   transition: 0.8s;
 }
 
 ::ng-deep.p-datatable .p-sortable-column.p-highlight .p-sortable-column-icon {
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 ::ng-deep.p-datatable
   .p-sortable-column.p-highlight:hover
   .p-sortable-column-icon {
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 form {
-  background: #e6e7ee;
+  background: var(--bg-color);
   overflow-y: hidden;
   border-radius: 2rem;
-  border: 0.1rem solid #d1d9e6;
+  border: 0.1rem solid var(--border-color);
   padding: 1.5rem;
   min-width: 28rem;
   max-width: 70%;
@@ -275,7 +280,7 @@ form {
 }
 
 ::ng-deep .modifyingAddress .p-dropdown .p-dropdown-panel {
-  background: #e6e7ee;
+  background: var(--bg-color);
   width: 100%;
 }
 
@@ -346,7 +351,7 @@ form {
 
 .col-xl-auto ::ng-deep .p-checkbox-label {
   margin-bottom: 0 !important;
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 .col-xl-auto ::ng-deep .p-checkbox {
@@ -400,19 +405,19 @@ form {
 }
 
 ::ng-deep .p-column-filter-menu-button:focus {
-  background-color: #e6e7ee;
-  box-shadow: inset 2px 2px 5px #b8b9be;
-  border: 0.1rem solid #d1d9e6;
+  background-color: var(--bg-color);
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset);
+  border: 0.1rem solid var(--border-color);
   padding: 0.55rem;
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 ::ng-deep.p-column-filter-overlay {
-  background-color: #e6e7ee;
-  box-shadow: inset 2px 2px 5px #b8b9be;
-  border: 0.1rem solid #d1d9e6;
+  background-color: var(--bg-color);
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset);
+  border: 0.1rem solid var(--border-color);
   padding: 0.55rem;
-  color: #44476a;
+  color: var(--txt-color);
   border-radius: 1rem;
 }
 
@@ -429,17 +434,18 @@ form {
 ::ng-deep.p-dropdown .p-dropdown-label.p-inputtext {
   font-weight: 600;
   font-size: 1rem;
-  color: #44476a !important;
+  color: var(--txt-color) !important;
 }
 
 ::ng-deep p-columnfilterformelement .p-inputtext {
   padding: 0.6rem 0.75rem;
-  color: #44476a;
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
+  color: var(--txt-color);
+  background-color: var(--bg-color);
+  border: 0.0625rem solid var(--border-color);
   transition: all 0.3s ease-in-out;
   border-radius: 0.99rem;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
   overflow-wrap: break-word;
   -webkit-appearance: none;
   width: 100%;
@@ -447,40 +453,41 @@ form {
 
 ::ng-deep p-columnfilterformelement .p-inputtext:enabled:focus {
   outline: 0;
-  border: 0.0625rem solid #d1d9e6;
+  border: 0.0625rem solid var(--border-color);
 
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
 }
 
 ::ng-deep .p-columnfilterformelement p-button:enabled:hover {
-  background-color: rgba(38, 40, 51, 0.03) !important;
-  color: #44476a !important;
-  border-color: #d1d9e6 !important;
+  background-color: var(--bg-hover-transparent-color) !important;
+  color: var(--txt-color) !important;
+  border-color: var(--border-color) !important;
 }
 
 ::ng-deep .p-columnfilterformelement .p-inputtext:enabled:hover {
   outline: 0;
   box-shadow: none;
-  border-color: #d1d9e6 !important;
+  border-color: var(--border-color) !important;
 }
 
 ::ng-deep.p-button {
-  background-color: #e6e7ee;
-  color: #44476a !important;
-  border-color: #d1d9e6 !important;
+  background-color: var(--bg-color);
+  color: var(--txt-color) !important;
+  border-color: var(--border-color) !important;
 }
 
 ::ng-deep .p-button.p-button-danger.p-button-text:enabled:hover {
-  color: #44476a !important;
-  border-color: #d1d9e6 !important;
+  color: var(--txt-color) !important;
+  border-color: var(--border-color) !important;
   outline: 0;
   animation: pulse 3s infinite;
-  background-color: rgba(38, 40, 51, 0.03);
+  background-color: var(--bg-hover-transparent-color);
 }
 
 ::ng-deep .p-button.p-button-outlined:enabled:hover {
-  background-color: #e6e7ee;
-  color: #44476a !important;
+  background-color: var(--bg-color);
+  color: var(--txt-color) !important;
   border: 0.0625rem solid;
 }
 
@@ -493,51 +500,52 @@ form {
 }
 
 ::ng-deep .pi.pi-filter-icon.pi-filter {
-  color: #b8bac7 !important;
+  color: var(--txt-label-color) !important;
 }
 
 ::ng-deep.p-column-filter-menu-button:hover .pi.pi-filter-icon.pi-filter {
-  color: #44476a !important;
+  color: var(--txt-color) !important;
 }
 
 ::ng-deep .p-column-filter-menu-button.p-column-filter-menu-button-active {
-  color: #44476a !important;
-  border-color: #d1d9e6 !important;
+  color: var(--txt-color) !important;
+  border-color: var(--border-color) !important;
   outline: 0;
   animation: pulse 3s infinite;
-  background-color: rgba(38, 40, 51, 0.03);
+  background-color: var(--bg-hover-transparent-color);
 }
 
 ::ng-deep .p-column-filter-menu-button.p-column-filter-menu-button-active,
 ::ng-deep
   .p-column-filter-menu-button.p-column-filter-menu-button-active:hover {
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
-  color: #44476a !important;
+  background-color: var(--bg-color);
+  border: 0.0625rem solid var(--border-color);
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
+  color: var(--txt-color) !important;
 }
 
 .address-form ::ng-deep .p-dialog .p-dialog-header {
   border-bottom: none;
-  color: #44476a;
+  color: var(--txt-color);
   background-color: transparent;
   padding: 1rem;
 }
 
 .address-txt {
-  color: #333333;
+  color: var(--txt-secondary-color);
   padding: 0rem 0.75rem 0rem 0.75rem;
   background-color: transparent;
   border: none;
   width: 100%;
-  border-bottom: 0.1rem solid #85868a;
+  border-bottom: 0.1rem solid var(--border-color);
   height: 1.8rem;
   transition: ease-in-out;
 }
 
 .address-txt:hover {
   transition: ease-in-out;
-  border-bottom: 0.2rem solid #44476a;
+  border-bottom: 0.2rem solid var(--txt-color);
 }
 
 .p-field * {
@@ -546,7 +554,7 @@ form {
 }
 
 .lblAddress {
-  color: #505152;
+  color: var(--txt-label-color);
   font-size: 11.3px;
   margin-bottom: 0;
   padding-bottom: 0.3rem;
@@ -555,29 +563,33 @@ form {
 
 ::ng-deep .queue-table .p-datatable-table .sticky-column-checkboxes {
   position: sticky;
-  background-color: #e6e7ee !important;
+  background-color: var(--bg-color) !important;
   z-index: 1;
   left: 0 !important;
-  box-shadow: inset 13px 0px 8px -12px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
-    inset 0px 2px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 13px 0px 8px -12px var(--box-shadow-inset),
+    inset -4px 0px 0px -2px var(--border-color),
+    inset 0px 2px 0px -2px var(--border-color) !important;
 }
 
 .sticky-column {
   left: 3.5rem !important;
   position: sticky;
   z-index: 1;
-  background-color: #e6e7ee !important;
+  background-color: var(--bg-color) !important;
   white-space: nowrap;
-  box-shadow: inset -4px 0px 0px -2px #d1d9e6, inset 0px 2px 0px -2px #d1d9e6 !important;
+  box-shadow: inset -4px 0px 0px -2px var(--border-color),
+    inset 0px 2px 0px -2px var(--border-color) !important;
 }
 
 ::ng-deep .queue-table .p-datatable-table .sticky-checkboxes-main {
   top: 0 !important;
   position: sticky !important;
   z-index: 2 !important;
-  box-shadow: inset 9px 9px 8px -9px #b8b9be, inset 0px -3px 0px -2px #d1d9e6,
-    inset 0px 0px 0px -26px transparent, inset -4px 0px 0px -2px #d1d9e6,
-    inset 0px 3px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 9px 9px 8px -9px var(--box-shadow-inset),
+    inset 0px -3px 0px -2px var(--border-color),
+    inset 0px 0px 0px -26px transparent,
+    inset -4px 0px 0px -2px var(--border-color),
+    inset 0px 3px 0px -2px var(--border-color) !important;
   border-top-left-radius: 1rem !important;
 }
 
@@ -585,30 +597,34 @@ form {
   top: 0 !important;
   position: sticky;
   z-index: 2;
-  box-shadow: inset 0px 9px 8px -9px #b8b9be, inset -4px -3px 0px -2px #d1d9e6,
-    inset 0px 0px 0px -26px transparent, inset 0px 3px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 0px 9px 8px -9px var(--box-shadow-inset),
+    inset -4px -3px 0px -2px var(--border-color),
+    inset 0px 0px 0px -26px transparent,
+    inset 0px 3px 0px -2px var(--border-color) !important;
 }
 
 .stck-head {
   top: 0 !important;
   position: sticky;
   z-index: 1;
-  background-color: #e6e7ee !important;
+  background-color: var(--bg-color) !important;
 }
 
 ::ng-deep .p-datatable .p-datatable-thead > tr > th {
   padding: 1rem !important;
-  box-shadow: inset 0px 8px 8px -7px #b8b9be, inset 0px -3px 0px -2px #d1d9e6,
+  box-shadow: inset 0px 8px 8px -7px var(--box-shadow-inset),
+    inset 0px -3px 0px -2px var(--border-color),
     inset 0px 0px 0px -26px transparent;
 }
 
 ::ng-deep .p-datatable .p-datatable-thead > tr > th:last-child {
-  box-shadow: inset 24px 33px 8px -32px #b8b9be, inset -54px 0px 15px -52px #fff,
-    inset 0px -3px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 24px 33px 8px -32px var(--box-shadow-inset),
+    inset -54px 0px 15px -52px var(--box-shadow-inset-secondary),
+    inset 0px -3px 0px -2px var(--border-color) !important;
 }
 
 ::ng-deep .queue-table .p-datatable-table .p-datatable-tbody > tr:last-child {
-  box-shadow: inset 0px -30px 8px -27px #fff !important;
+  box-shadow: inset 0px -30px 8px -27px var(--box-shadow-inset-secondary) !important;
   border-bottom-left-radius: 1rem;
 }
 
@@ -617,8 +633,10 @@ form {
   .p-datatable-tbody
   > tr:last-child
   > td.sticky-column-checkboxes:first-child {
-  box-shadow: inset 13px 0px 8px -12px #b8b9be, inset 0px -30px 8px -27px #fff,
-    inset 0px 2px 0px -2px #d1d9e6, inset -4px 0px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 13px 0px 8px -12px var(--box-shadow-inset),
+    inset 0px -30px 8px -27px var(--box-shadow-inset-secondary),
+    inset 0px 2px 0px -2px var(--border-color),
+    inset -4px 0px 0px -2px var(--border-color) !important;
   border-bottom-left-radius: 1rem;
 }
 
@@ -627,12 +645,13 @@ form {
   .p-datatable-tbody
   > tr:last-child
   > td.sticky-column:nth-child(2) {
-  box-shadow: inset 0px -30px 8px -27px #fff, inset 0px 2px 0px -2px #d1d9e6,
-    inset -4px 0px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 0px -30px 8px -27px var(--box-shadow-inset-secondary),
+    inset 0px 2px 0px -2px var(--border-color),
+    inset -4px 0px 0px -2px var(--border-color) !important;
 }
 
 ::ng-deep.p-button.p-button-text:enabled:hover {
-  background: #e6e7ee !important;
+  background: var(--bg-color) !important;
 }
 
 ::ng-deep.p-datatable-wrapper {
@@ -652,7 +671,7 @@ form {
   ::ng-deep
   .mat-form-field-appearance-standard
   .mat-form-field-underline {
-  background-color: #296e58;
+  background-color: var(--success-color);
   height: 0.2rem !important;
 }
 
@@ -693,21 +712,22 @@ form {
 
 ::ng-deep.p-overlaypanel .p-overlaypanel-content {
   padding: 0.571rem 1rem;
-  background-color: #e6e7ee;
+  background-color: var(--bg-color);
   border-radius: 1rem;
-  box-shadow: inset 6px 4px 6px -5px #b8b9be, inset -3px -3px 7px #fff;
+  box-shadow: inset 6px 4px 6px -5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
   width: 12rem;
 }
 
 ::ng-deep.p-overlaypanel {
-  background: #e6e7ee;
+  background: var(--bg-color);
   border-radius: 1rem;
   box-shadow: none;
   border: none;
 }
 
 ::ng-deep.p-overlaypanel:after {
-  border: solid #e6e7ee;
-  border-color: rgb(219 219 219 / 0%);
-  border-bottom-color: #e6e7ee;
+  border: solid var(--bg-color);
+  border-color: var(--bg-hover-transparent-color);
+  border-bottom-color: var(--bg-color);
 }
