--- a/src/app/partials/login/login.component.css
+++ b/src/app/partials/login/login.component.css
@@ -81,27 +81,27 @@
   padding: 1.5rem;
   min-width: unset;
   max-width: unset;
-  border: 0.0625rem solid #d1d9e6;
-  color: #44476a;
-  background-color: #e6e7ee;
-  box-shadow: 2px 2px 5px #b8b9be;
+  border: 0.0625rem solid var(--border-color);
+  color: var(--txt-color);
+  background-color: var(--bg-color);
+  box-shadow: 2px 2px 5px var(--box-shadow-inset);
 }
 
 .loginForm
   ::ng-deep.p-checkbox:not(.p-checkbox-disabled)
   .p-checkbox-box.p-focus {
-  box-shadow: 2px 2px 5px #b8b9be !important;
-  border-color: #d1d9e6 !important;
+  box-shadow: 2px 2px 5px var(--box-shadow-inset) !important;
+  border-color: var(--border-color) !important;
 }
 
 .loginForm ::ng-deep .p-checkbox-label {
   margin-bottom: 0 !important;
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 .link {
   line-height: 22px;
-  color: #44476a;
+  color: var(--txt-color);
   float: right;
   padding-left: 1rem;
 }
