--- a/src/app/partials/statistics/statistics.component.css
+++ b/src/app/partials/statistics/statistics.component.css
@@ -1,34 +1,33 @@
 .main-row {
-    margin-left: 9rem;
-    margin-right: 1rem;
-    margin-top: 2.5rem;
-    height: 57rem;
+  margin-left: 9rem;
+  margin-right: 1rem;
+  margin-top: 2.5rem;
+  height: 57rem;
 }
 
-.chart-col{
-    overflow-y: hidden;
-    border-radius: 2rem;
-    border: 0.10rem solid #d1d9e6;
-    padding: 1.5rem;
+.chart-col {
+  overflow-y: hidden;
+  border-radius: 2rem;
+  border: 0.1rem solid var(--border-color);
+  padding: 1.5rem;
 }
 
-.chart-sum-col{
-    overflow-y: hidden;
-    border-radius: 2rem;
-    border: 0.10rem solid #d1d9e6;
-    padding: 2.5rem;
+.chart-sum-col {
+  overflow-y: hidden;
+  border-radius: 2rem;
+  border: 0.1rem solid var(--border-color);
+  padding: 2.5rem;
 }
 
-.icon-rep{
-    font-size: 3.9rem    ;
-    vertical-align: text-top;
-    background-color: #e6e7ee;
-    border-radius: 5rem;
-    border: .0625rem solid #d1d9e6;
-    padding: 1rem 2.5rem 1rem 2.5rem;
-
+.icon-rep {
+  font-size: 3.9rem;
+  vertical-align: text-top;
+  background-color: var(--bg-color);
+  border-radius: 5rem;
+  border: 0.0625rem solid var(--border-color);
+  padding: 1rem 2.5rem 1rem 2.5rem;
 }
 
-.dials-percentage{
-    margin-left: 37%;
+.dials-percentage {
+  margin-left: 37%;
 }
