--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,38 @@
 @import "../node_modules/primeicons/primeicons.css";
 @import "../node_modules/primeng/resources/themes/nova/theme.css";
 
+:root {
+  --bg-color: #e6e7ee;
+  --bg-hover-color: #e0e1e9;
+  --bg-hover-transparent-color: #26283308;
+  --bg-transparent: #00000000;
+
+  --txt-color: #44476a;
+  --txt-secondary-color: #333333;
+  --txt-label-color: #5c5c5f;
+
+  --border-color: #d1d9e6;
+
+  --box-shadow-inset: #b8b9be;
+  --box-shadow-inset-secondary: #fff;
+  --pulse-animation-color: #8d90b5b3;
+
+  --success-color: #296e58;
+  --error-color: #a91e2c;
+  --error-hover-color: #c42131;
+
+  --overlay-color: #e6e7eea2;
+
+  --toggle-bg-color: #b1bcce;
+  --toggle-slide-bg-color: #b1bccec9;
+  --toggle-slide-hover-bg-color: #44476ad8;
+
+  --bg-scrollbar: #b8b9be80;
+  --bg-scrollbar-hover: #cfcfd6;
+}
+
 html {
-  background-color: #e6e7ee;
+  background-color: var(--bg-color);
   font-size: 0.9rem;
   height: 100%;
   overflow-y: auto;
@@ -12,13 +42,44 @@ html {
 
 body {
   height: 100%;
-  background-color: #e6e7ee;
+  background-color: var(--bg-color);
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .container-fluid {
-  background-color: #e6e7ee;
+  background-color: var(--bg-color);
   height: 100%;
+}
+
+::placeholder {
+  color: var(--txt-label-color);
+  opacity: 1;
+}
+
+:-ms-input-placeholder {
+  color: var(--txt-label-color);
+}
+
+::-ms-input-placeholder {
+  color: var(--txt-label-color);
+}
+
+h1,
+h3,
+h5 {
+  color: var(--txt-secondary-color) !important;
+}
+
+hr {
+  border-color: var(--border-color) !important;
+}
+
+td {
+  color: var(--txt-secondary-color);
+}
+
+.txt-no-btn {
+  color: var(--txt-secondary-color);
 }
 
 ::-webkit-scrollbar {
@@ -33,26 +94,25 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background: var(--bg-hover-transparent-color);
   border-radius: 2rem;
 }
 
 ::-webkit-scrollbar-track:hover {
-  background: #cfcfd6;
+  background: var(--bg-scrollbar-hover);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #b8b9be80;
+  background: var(--bg-scrollbar);
   border-radius: 2rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #b8b9be;
+  background: var(--box-shadow-inset);
 }
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
   margin: 0;
 }
 
@@ -62,27 +122,27 @@ textarea {
 }
 
 .mat-select-panel {
-  background-color: #e6e7ee;
+  background-color: var(--bg-color);
 }
 
 .mat-option-text {
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 .mat-option.mat-active {
-  background-color: rgba(38, 40, 51, 0.03) !important;
+  background-color: var(--bg-hover-transparent-color) !important;
 }
 
 .mat-form-field.mat-focused .mat-form-field-ripple {
-  background-color: #44476a;
+  background-color: var(--txt-color);
 }
 
 .mat-form-field.mat-focused .mat-form-field-label {
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 .mat-form-field.mat-focused.mat-primary .mat-select-arrow {
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 .mat-icon-button.mat-button-base {
@@ -90,7 +150,7 @@ textarea {
 }
 
 .mat-sort-header-arrow {
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 .mat-sort-header-container {
@@ -99,15 +159,15 @@ textarea {
 
 @keyframes pulse {
   0% {
-    box-shadow: 0 0 0 0 rgba(141, 144, 181, 0.7);
+    box-shadow: 0 0 0 0 var(--pulse-animation-color);
   }
 
   70% {
-    box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 0.2rem var(--bg-transparent);
   }
 
   100% {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 0 var(--bg-transparent);
   }
 }
 
@@ -121,27 +181,24 @@ textarea {
   }
 }
 
-
-
 .mat-tooltip {
-  color: #44476a !important;
+  color: var(--txt-color) !important;
   font-weight: bold;
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
+  background-color: var(--bg-color);
+  border: 0.0625rem solid var(--border-color);
   transition: all 0.2s ease-in-out;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  box-shadow: inset 2px 2px 5px var(--box-shadow-inset),
+    inset -3px -3px 7px var(--box-shadow-inset-secondary);
 }
 
 .show {
   animation: fade-show 1s;
   display: inline !important;
-
 }
 
 .hide {
   animation: fade-hide 1s;
   display: none !important;
-
 }
 
 @keyframes fade-show {
@@ -165,7 +222,6 @@ textarea {
 .show-line {
   animation: fade-show-line 1s;
   display: inline-flex !important;
-
 }
 
 @keyframes fade-show-line {
@@ -179,7 +235,6 @@ textarea {
 
 .show-line-b {
   display: inline-block !important;
-
 }
 
 .not-visible {
@@ -243,15 +298,15 @@ textarea {
 }
 
 .color-rd {
-  color: #a91e2c;
+  color: var(--error-color);
 }
 
 .color-gr {
-  color: #296e58;
+  color: var(--success-color);
 }
 
 .color-pr {
-  color: #44476a;
+  color: var(--txt-color);
 }
 
 .not-rounded {
@@ -278,13 +333,12 @@ textarea {
   margin: 0 !important;
 }
 
-.padding-tp{
+.padding-tp {
   padding-top: 1rem;
 }
-.padding-bt{
+.padding-bt {
   padding-bottom: 1rem;
 }
-
 
 .input-disabled-neumorphism {
   outline: 0 !important;
@@ -292,6 +346,8 @@ textarea {
   cursor: default;
 }
 
-button, button:focus, button:hover{
+button,
+button:focus,
+button:hover {
   outline: none;
 }
